; ModuleID = '/home/carl/AnghaBench/timescaledb/src/extr_chunk.c_ts_chunk_delete_by_hypertable_id.c'
source_filename = "/home/carl/AnghaBench/timescaledb/src/extr_chunk.c_ts_chunk_delete_by_hypertable_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DROP_RESTRICT = common dso_local global i32 0, align 4
@Anum_chunk_hypertable_id_idx_hypertable_id = common dso_local global i32 0, align 4
@BTEqualStrategyNumber = common dso_local global i32 0, align 4
@F_INT4EQ = common dso_local global i32 0, align 4
@CHUNK_HYPERTABLE_ID_INDEX = common dso_local global i32 0, align 4
@chunk_tuple_delete = common dso_local global i32 0, align 4
@ForwardScanDirection = common dso_local global i32 0, align 4
@RowExclusiveLock = common dso_local global i32 0, align 4
@CurrentMemoryContext = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ts_chunk_delete_by_hypertable_id(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca [1 x i32], align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* @DROP_RESTRICT, align 4
  store i32 %5, i32* %4, align 4
  %6 = getelementptr inbounds [1 x i32], [1 x i32]* %3, i64 0, i64 0
  %7 = load i32, i32* @Anum_chunk_hypertable_id_idx_hypertable_id, align 4
  %8 = load i32, i32* @BTEqualStrategyNumber, align 4
  %9 = load i32, i32* @F_INT4EQ, align 4
  %10 = load i32, i32* %2, align 4
  %11 = call i32 @Int32GetDatum(i32 %10)
  %12 = call i32 @ScanKeyInit(i32* %6, i32 %7, i32 %8, i32 %9, i32 %11)
  %13 = load i32, i32* @CHUNK_HYPERTABLE_ID_INDEX, align 4
  %14 = getelementptr inbounds [1 x i32], [1 x i32]* %3, i64 0, i64 0
  %15 = load i32, i32* @chunk_tuple_delete, align 4
  %16 = load i32, i32* @ForwardScanDirection, align 4
  %17 = load i32, i32* @RowExclusiveLock, align 4
  %18 = load i32, i32* @CurrentMemoryContext, align 4
  %19 = call i32 @chunk_scan_internal(i32 %13, i32* %14, i32 1, i32 %15, i32* %4, i32 0, i32 %16, i32 %17, i32 %18)
  ret i32 %19
}

declare dso_local i32 @ScanKeyInit(i32*, i32, i32, i32, i32) #1

declare dso_local i32 @Int32GetDatum(i32) #1

declare dso_local i32 @chunk_scan_internal(i32, i32*, i32, i32, i32*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
